--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.28.1",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ejs-lint": "^2.0.1",
